--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -72,5 +72,7 @@
   "already_have_account": "Already have an account?",
   "class_update": "Class Update",
   "task_reminder": "Task Reminder",
-  "group_message": "Group Message"
+  "group_message": "Group Message",
+  "app_theme": "App Theme",
+  "coming_soon": "Coming soon..."
 }
