--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -72,5 +72,7 @@
   "already_have_account": "¿Ya tienes una cuenta?",
   "class_update": "Actualización de Clase",
   "task_reminder": "Recordatorio de Tarea",
-  "group_message": "Mensaje de Grupo"
+  "group_message": "Mensaje de Grupo",
+  "app_theme": "Tema de la aplicación",
+  "coming_soon": "Próximamente..."
 }
