push notification commit

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -74,5 +74,27 @@
   "task_reminder": "Task Reminder",
   "group_message": "Group Message",
   "app_theme": "App Theme",
-  "coming_soon": "Coming soon..."
+  "coming_soon": "Coming soon...",
+  "course_selection": "Course Selection",
+  "select_courses": "Select Courses",
+  "preferred_study_time": "Preferred Study Time",
+  "workload_preference": "Workload Preference",
+  "required": "Required",
+  "elective": "Elective",
+  "save_continue": "Save & Continue",
+  "preferences_saved": "Preferences saved successfully!",
+  "break_time_range": "Break Time Range",
+  "start_time": "Start Time",
+  "end_time": "End Time",
+  "morning": "Morning",
+  "afternoon": "Afternoon",
+  "evening": "Evening",
+  "light": "Light",
+  "medium": "Medium",
+  "intense": "Intense",
+  "your_weekly_schedule": "Your Weekly Schedule",
+  "fill_all_fields": "Please fill in all fields.",
+  "password_policy_message": "Password must be 8-16 characters long, include uppercase, lowercase, number, and special character.",
+  "max_courses_reached": "The maximum number of courses allowed (6) has been reached.",
+  "add_course": "Add Course"
 }
