--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -74,5 +74,27 @@
   "task_reminder": "Recordatorio de Tarea",
   "group_message": "Mensaje de Grupo",
   "app_theme": "Tema de la aplicación",
-  "coming_soon": "Próximamente..."
+  "coming_soon": "Próximamente...",
+  "course_selection": "Selección de Cursos",
+  "select_courses": "Seleccionar Cursos",
+  "preferred_study_time": "Horario de Estudio Preferido",
+  "workload_preference": "Nivel de Carga de Trabajo",
+  "required": "Requerido",
+  "elective": "Electivo",
+  "morning": "Mañana",
+  "afternoon": "Tarde",
+  "evening": "Noche",
+  "light": "Ligero",
+  "medium": "Medio",
+  "intense": "Intenso",
+  "save_continue": "Guardar y Continuar",
+  "preferences_saved": "¡Preferencias guardadas con éxito!",
+  "break_time_range": "Horario de Descanso",
+  "start_time": "Hora de Inicio",
+  "end_time": "Hora de Fin",
+  "your_weekly_schedule": "Tu Horario Semanal",
+  "fill_all_fields": "Por favor, completa todos los campos.",
+  "password_policy_message": "La contraseña debe tener entre 8 y 16 caracteres, e incluir una mayúscula, una minúscula, un número y un carácter especial.",
+  "max_courses_reached": "Se alcanzó el número máximo de cursos permitidos (6).",
+  "add_course": "Agregar Curso"
 }
