Fully added support for Spanish Language

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,100 +1,145 @@
 {
-  "welcome": "Welcome",
   "login": "Login",
-  "signup": "Sign Up",
-  "logout": "Logout",
   "email": "Email",
   "password": "Password",
-  "confirm_password": "Confirm Password",
-  "forgot_password": "Forgot Password?",
-  "home": "Home",
-  "profile": "Profile",
-  "settings": "Settings",
-  "language": "Language",
-  "continue": "Continue",
-  "next": "Next",
-  "back": "Back",
-  "submit": "Submit",
-  "cancel": "Cancel",
-  "save": "Save",
-  "search": "Search",
-  "notifications": "Notifications",
-  "help": "Help",
-  "contact_us": "Contact Us",
-  "terms_and_conditions": "Terms and Conditions",
-  "privacy_policy": "Privacy Policy",
-  "about_us": "About Us",
-  "tagline": "Empower your academic journey – your time, your tribe.",
-  "get_started": "Get Started",
-  "error": "An error occurred",
-  "loading": "Loading...",
-  "no_data": "No data available",
-  "retry": "Retry",
-  "no_account": "Don't have an account?",
-  "have_account": "Already have an account?",
-  "upcoming_deadlines": "Upcoming Deadlines",
-  "my_schedule": "My Schedule",
-  "collab_highlights": "Collaboration Highlights",
-  "build_schedule": "Build My Schedule",
-  "add_task": "Add New Task",
-  "task_title": "Task Title",
-  "select_deadline": "Select Deadline",
+  "confirm_password": "Confirm password",
+  "forgot_password": "Forgot password",
+  "signup": "Signup",
+  "login_now": "Login now",
+  "signup_now": "Signup now",
+  "create_account": "Create account",
+  "already_have_account": "Already have account",
+  "dont_have_account": "Don't have account",
+  "enter_email": "Enter email",
+  "enter_password": "Enter password",
+  "enter_confirm_password": "Enter confirm password",
+  "invalid_email": "Invalid email",
+  "password_mismatch": "Password mismatch",
   "welcome_to": "Welcome to",
-  "course_type": "Course Type",
-  "select_course": "Select a Course",
-  "preferred_time": "Preferred Time Range",
-  "select_time_range": "Select start and end time",
-  "generate_schedule": "Generate Schedule",
-  "your_schedule": "Your Weekly Schedule",
-  "collab_board": "Collaboration Board",
-  "new_collab": "New Collab",
+  "personal_details": "Personal details",
+  "access_permissions": "Access permissions",
+  "address_info": "Address info",
+  "emergency_contact": "Emergency contact",
+  "service_options": "Service options",
+  "next": "Next",
+  "skip": "Skip",
+  "finish": "Finish",
+  "welcome": "Welcome",
+  "upcoming_deadlines": "Upcoming deadlines",
+  "my_schedule": "My schedule",
+  "collab_highlights": "Collab highlights",
   "open": "Open",
-  "collab_title": "Collaboration Title",
-  "collab_description": "Project Description",
-  "create": "Create",
-  "chat_room": "Chat Room",
-  "type_message": "Type a message...",
-  "skills": "Skills",
-  "interests": "Interests",
-  "change_language": "Change Language",
-  "edit_profile": "Edit Profile",
+  "build_my_schedule": "Build my schedule",
+  "add_task": "Add task",
+  "task_title": "Task title",
+  "pick_a_date": "Pick a date",
+  "pick_a_time": "Pick a time",
+  "cancel": "Cancel",
+  "add": "Add",
+  "schedule_builder": "Schedule builder",
+  "generate_schedule": "Generate schedule",
+  "no_classes_selected": "No classes selected",
+  "reset": "Reset",
+  "class_conflict": "Class conflict",
+  "my_profile": "My profile",
+  "edit_profile": "Edit profile",
+  "save_changes": "Save changes",
   "name": "Name",
+  "phone_number": "Phone number",
+  "bio": "Bio",
   "department": "Department",
+  "notifications": "Notifications",
+  "no_notifications": "No notifications",
+  "collaboration_board": "Collaboration board",
+  "new_collab": "New collab",
+  "title": "Title",
+  "description": "Description",
+  "tags": "Tags",
+  "skills": "Skills",
+  "joined": "Joined",
+  "join": "Join",
+  "members": "Members",
+  "start_new_collab": "Start new collab",
+  "create": "Create",
+  "join_collaboration_prompt": "Join collaboration prompt",
+  "collab_created": "Collab created",
+  "error_joining_collab": "Error joining collab",
+  "search_placeholder": "Search placeholder",
+  "sort_by": "Sort by",
+  "recent": "Recent",
+  "computer_science": "Computer science",
+  "machine_learning": "Machine learning",
+  "no_matching_collabs": "No matching collabs",
+  "language": "Language",
+  "notifications_settings": "Notifications settings",
+  "dark_mode": "Dark mode",
+  "logout": "Logout",
+  "change_password": "Change password",
+  "no_user_for_email": "No user found for that email.",
+  "incorrect_password": "Incorrect password.",
+  "login_failed": "Login failed. Please try again.",
+  "app_name": "SynerSched",
+  "leave_collaboration": "Leave Collaboration",
+  "left_collab_message": "You left the collaboration",
+  "task_due_1h": "{0} is due in 1 hour",
+  "task_due_30m": "{0} is due in 30 minutes",
+  "task_due_15m": "{0} is due in 15 minutes",
+  "no_profile_data": "No profile data found.",
+  "no_name": "No name",
+  "unknown_department": "Unknown Department",
+  "unknown_year": "Unknown Year",
+  "no_interests": "No interests",
+  "logged_out": "You have been logged out",
+  "enter_name": "Enter your name",
+  "enter_year": "Enter year",
+  "add_skill": "Add a skill",
+  "enter_interests": "Enter your interests",
+  "profile_updated": "Profile updated",
+  "error_saving_profile": "Error saving profile",
   "year": "Year",
-  "edit": "Edit",
-  "gpa_estimator": "GPA Estimator",
-  "current_cgpa": "Current CGPA",
-  "completed_credits": "Completed Credits",
-  "expected_grades": "Expected Grades",
-  "calculate": "Calculate",
-  "estimated_cgpa": "Estimated CGPA",
-  "theme": "App Theme",
-  "already_have_account": "Already have an account?",
-  "class_update": "Class Update",
-  "task_reminder": "Task Reminder",
-  "group_message": "Group Message",
-  "app_theme": "App Theme",
-  "coming_soon": "Coming soon...",
-  "course_selection": "Course Selection",
-  "select_courses": "Select Courses",
-  "preferred_study_time": "Preferred Study Time",
-  "workload_preference": "Workload Preference",
+  "interests": "Interests",
+  "change_language": "Change language",
+  "app_theme": "App theme",
+  "coming_soon": "Coming soon",
+  "settings": "Settings",
+  "your_weekly_schedule": "Your Weekly Schedule",
+  "no_schedule_for_day": "No schedule for this day.",
+  "mon": "Mon",
+  "tue": "Tue",
+  "wed": "Wed",
+  "thu": "Thu",
+  "fri": "Fri",
+  "sat": "Sat",
+  "sun": "Sun",
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December",
+  "build_schedule": "Build Schedule",
+  "course_type": "Course Type",
   "required": "Required",
   "elective": "Elective",
-  "save_continue": "Save & Continue",
-  "preferences_saved": "Preferences saved successfully!",
+  "select_courses": "Select Courses",
+  "add_course": "Add Course",
   "break_time_range": "Break Time Range",
   "start_time": "Start Time",
   "end_time": "End Time",
-  "morning": "Morning",
-  "afternoon": "Afternoon",
-  "evening": "Evening",
-  "light": "Light",
-  "medium": "Medium",
-  "intense": "Intense",
-  "your_weekly_schedule": "Your Weekly Schedule",
-  "fill_all_fields": "Please fill in all fields.",
-  "password_policy_message": "Password must be 8-16 characters long, include uppercase, lowercase, number, and special character.",
-  "max_courses_reached": "The maximum number of courses allowed (6) has been reached.",
-  "add_course": "Add Course"
+  "preferred_study_time": "Preferred Study Time",
+  "workload_preference": "Workload Preference",
+  "max_course_limit": "You can select a maximum of 6 courses.",
+  "new_semester_detected": "New Semester Detected",
+  "new_semester_content": "It's now {0}. Would you like to build a new schedule?",
+  "later": "Later",
+  "yes_build": "Yes, Build",
+  "english": "English",
+  "spanish": "Spanish",
+  "apply": "Apply"
 }
