--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -1,100 +1,145 @@
 {
-  "welcome": "Bienvenido",
   "login": "Iniciar sesión",
-  "signup": "Registrarse",
-  "logout": "Cerrar sesión",
   "email": "Correo electrónico",
   "password": "Contraseña",
   "confirm_password": "Confirmar contraseña",
   "forgot_password": "¿Olvidaste tu contraseña?",
-  "home": "Inicio",
-  "profile": "Perfil",
-  "settings": "Configuración",
-  "language": "Idioma",
-  "continue": "Continuar",
-  "next": "Siguiente",
-  "back": "Atrás",
-  "submit": "Enviar",
-  "cancel": "Cancelar",
-  "save": "Guardar",
-  "search": "Buscar",
-  "notifications": "Notificaciones",
-  "help": "Ayuda",
-  "contact_us": "Contáctanos",
-  "terms_and_conditions": "Términos y condiciones",
-  "privacy_policy": "Política de privacidad",
-  "about_us": "Sobre nosotros",
-  "tagline": "Impulsa tu viaje académico: tu tiempo, tu tribu.",
-  "get_started": "Comenzar",
-  "error": "Ocurrió un error",
-  "loading": "Cargando...",
-  "no_data": "No hay datos disponibles",
-  "retry": "Reintentar",
-  "no_account": "¿No tienes una cuenta?",
-  "have_account": "¿Ya tienes una cuenta?",
-  "upcoming_deadlines": "Próximas entregas",
-  "my_schedule": "Mi horario",
-  "collab_highlights": "Proyectos de colaboración",
-  "build_schedule": "Crear mi horario",
-  "add_task": "Agregar nueva tarea",
-  "task_title": "Título de la tarea",
-  "select_deadline": "Seleccionar fecha límite",
+  "signup": "Registrarse",
+  "login_now": "Inicia sesión ahora",
+  "signup_now": "Regístrate ahora",
+  "create_account": "Crear cuenta",
+  "already_have_account": "¿Ya tienes una cuenta?",
+  "dont_have_account": "¿No tienes una cuenta?",
+  "enter_email": "Introduce el correo electrónico",
+  "enter_password": "Introduce la contraseña",
+  "enter_confirm_password": "Confirma la contraseña",
+  "invalid_email": "Correo electrónico inválido",
+  "password_mismatch": "Las contraseñas no coinciden",
   "welcome_to": "Bienvenido a",
-  "course_type": "Tipo de curso",
-  "select_course": "Selecciona un curso",
-  "preferred_time": "Horario preferido",
-  "select_time_range": "Selecciona hora de inicio y fin",
-  "generate_schedule": "Generar horario",
-  "your_schedule": "Tu horario semanal",
-  "collab_board": "Tablero de colaboración",
-  "new_collab": "Nueva colaboración",
+  "personal_details": "Detalles personales",
+  "access_permissions": "Permisos de acceso",
+  "address_info": "Información de dirección",
+  "emergency_contact": "Contacto de emergencia",
+  "service_options": "Opciones de servicio",
+  "next": "Siguiente",
+  "skip": "Omitir",
+  "finish": "Finalizar",
+  "welcome": "Bienvenido",
+  "upcoming_deadlines": "Próximas fechas límite",
+  "my_schedule": "Mi horario",
+  "collab_highlights": "Colaboraciones destacadas",
   "open": "Abrir",
-  "collab_title": "Título de la colaboración",
-  "collab_description": "Descripción del proyecto",
-  "create": "Crear",
-  "chat_room": "Sala de chat",
-  "type_message": "Escribe un mensaje...",
+  "build_my_schedule": "Construir mi horario",
+  "add_task": "Agregar tarea",
+  "task_title": "Título de la tarea",
+  "pick_a_date": "Seleccionar una fecha",
+  "pick_a_time": "Seleccionar una hora",
+  "cancel": "Cancelar",
+  "add": "Agregar",
+  "schedule_builder": "Generador de horario",
+  "generate_schedule": "Generar horario",
+  "no_classes_selected": "No se seleccionaron clases",
+  "reset": "Restablecer",
+  "class_conflict": "Conflicto de clases",
+  "my_profile": "Mi perfil",
+  "edit_profile": "Editar perfil",
+  "save_changes": "Guardar cambios",
+  "name": "Nombre",
+  "phone_number": "Número de teléfono",
+  "bio": "Biografía",
+  "department": "Departamento",
+  "notifications": "Notificaciones",
+  "no_notifications": "Sin notificaciones",
+  "collaboration_board": "Tablero de colaboración",
+  "new_collab": "Nueva colaboración",
+  "title": "Título",
+  "description": "Descripción",
+  "tags": "Etiquetas",
   "skills": "Habilidades",
+  "joined": "Unido",
+  "join": "Unirse",
+  "members": "Miembros",
+  "start_new_collab": "Iniciar nueva colaboración",
+  "create": "Crear",
+  "join_collaboration_prompt": "¿Deseas unirte a esta colaboración?",
+  "collab_created": "Colaboración creada",
+  "error_joining_collab": "Error al unirse a la colaboración",
+  "search_placeholder": "Buscar por título, descripción o etiqueta",
+  "sort_by": "Ordenar por",
+  "recent": "Recientes",
+  "computer_science": "Ciencias de la computación",
+  "machine_learning": "Aprendizaje automático",
+  "no_matching_collabs": "No hay colaboraciones coincidentes",
+  "language": "Idioma",
+  "notifications_settings": "Configuración de notificaciones",
+  "dark_mode": "Modo oscuro",
+  "logout": "Cerrar sesión",
+  "change_password": "Cambiar contraseña",
+  "no_user_for_email": "No se encontró un usuario con ese correo.",
+  "incorrect_password": "Contraseña incorrecta.",
+  "login_failed": "Error al iniciar sesión. Inténtalo de nuevo.",
+  "app_name": "SynerSched",
+  "leave_collaboration": "Salir de la colaboración",
+  "left_collab_message": "Saliste de la colaboración",
+  "task_due_1h": "{0} vence en 1 hora",
+  "task_due_30m": "{0} vence en 30 minutos",
+  "task_due_15m": "{0} vence en 15 minutos",
+  "no_profile_data": "No se encontraron datos del perfil.",
+  "no_name": "Sin nombre",
+  "unknown_department": "Departamento desconocido",
+  "unknown_year": "Año desconocido",
+  "settings": "Configuraciones",
+  "no_interests": "Sin intereses",
+  "logged_out": "Has cerrado sesión",
+  "enter_name": "Ingrese su nombre",
+  "enter_year": "Ingrese el año",
+  "add_skill": "Agregar una habilidad",
+  "enter_interests": "Ingrese sus intereses",
+  "profile_updated": "Perfil actualizado",
+  "error_saving_profile": "Error al guardar el perfil",
+  "year": "Año",
   "interests": "Intereses",
   "change_language": "Cambiar idioma",
-  "edit_profile": "Editar perfil",
-  "name": "Nombre",
-  "department": "Departamento",
-  "year": "Año",
-  "edit": "Editar",
-  "gpa_estimator": "Estimador de GPA",
-  "current_cgpa": "GPA actual",
-  "completed_credits": "Créditos completados",
-  "expected_grades": "Calificaciones esperadas",
-  "calculate": "Calcular",
-  "estimated_cgpa": "GPA estimado",
-  "theme": "Tema de la aplicación",
-  "already_have_account": "¿Ya tienes una cuenta?",
-  "class_update": "Actualización de Clase",
-  "task_reminder": "Recordatorio de Tarea",
-  "group_message": "Mensaje de Grupo",
   "app_theme": "Tema de la aplicación",
-  "coming_soon": "Próximamente...",
-  "course_selection": "Selección de Cursos",
-  "select_courses": "Seleccionar Cursos",
-  "preferred_study_time": "Horario de Estudio Preferido",
-  "workload_preference": "Nivel de Carga de Trabajo",
-  "required": "Requerido",
-  "elective": "Electivo",
-  "morning": "Mañana",
-  "afternoon": "Tarde",
-  "evening": "Noche",
-  "light": "Ligero",
-  "medium": "Medio",
-  "intense": "Intenso",
-  "save_continue": "Guardar y Continuar",
-  "preferences_saved": "¡Preferencias guardadas con éxito!",
-  "break_time_range": "Horario de Descanso",
-  "start_time": "Hora de Inicio",
-  "end_time": "Hora de Fin",
-  "your_weekly_schedule": "Tu Horario Semanal",
-  "fill_all_fields": "Por favor, completa todos los campos.",
-  "password_policy_message": "La contraseña debe tener entre 8 y 16 caracteres, e incluir una mayúscula, una minúscula, un número y un carácter especial.",
-  "max_courses_reached": "Se alcanzó el número máximo de cursos permitidos (6).",
-  "add_course": "Agregar Curso"
+  "coming_soon": "Próximamente",
+  "your_weekly_schedule": "Tu horario semanal",
+  "no_schedule_for_day": "No hay horario para este día.",
+  "mon": "Lun",
+  "tue": "Mar",
+  "wed": "Mié",
+  "thu": "Jue",
+  "fri": "Vie",
+  "sat": "Sáb",
+  "sun": "Dom",
+  "january": "Enero",
+  "february": "Febrero",
+  "march": "Marzo",
+  "april": "Abril",
+  "may": "Mayo",
+  "june": "Junio",
+  "july": "Julio",
+  "august": "Agosto",
+  "september": "Septiembre",
+  "october": "Octubre",
+  "november": "Noviembre",
+  "december": "Diciembre",
+  "build_schedule": "Crear Horario",
+  "course_type": "Tipo de curso",
+  "required": "Obligatorio",
+  "elective": "Optativo",
+  "select_courses": "Seleccionar cursos",
+  "add_course": "Agregar curso",
+  "break_time_range": "Horario de descanso",
+  "start_time": "Hora de inicio",
+  "end_time": "Hora de fin",
+  "preferred_study_time": "Horario de estudio preferido",
+  "workload_preference": "Nivel de carga académica",
+  "max_course_limit": "Puedes seleccionar un máximo de 6 cursos.",
+  "new_semester_detected": "Nuevo semestre detectado",
+  "new_semester_content": "Ahora es {0}. ¿Deseas crear un nuevo horario?",
+  "later": "Más tarde",
+  "yes_build": "Sí, crear",
+  "english": "Inglés",
+  "spanish": "Español",
+  "apply": "Aplicar"
 }
